infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          # array of arguments to provide to the primary command that gets executed when the container is build out of the image
          # arguments are found in commanline option in nats-streaming image docs on docker hub
          args: [
            '-p', '4222',
            '-m', '8222',
            # how often nats sends a hearbeat request to each of its clients
            '-hbi', '5s',
            # how long each client has to respond
            '-hbt', '5s',
            # how many times each client can fail before nats can assume connection is dead and gone
            '-hbf', '2',
            '-SD', 
            -cid, 'ticketing'
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    # monitoring port: can go to localhost:8222/streaming for more info
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
